More FooCoin/LiteCoin text replacement

--- a/doc/README
+++ b/doc/README
@@ -1,8 +1,9 @@
-FooCoin 1.0
+AssPennies 1.0
 
 Copyright (c) 2009-2012 Bitcoin Developers
 Copyright (c) 2011-2012 Litecoin Developers
 Copyright (c) 2013 adam m!
+Copyright (c) 2014 The AssPenny Foundation
 
 Distributed under the MIT/X11 software license, see the accompanying
 file COPYING or http://www.opensource.org/licenses/mit-license.php.
@@ -13,7 +14,7 @@ cryptographic software written by Eric Young (eay@cryptsoft.com).
 
 Intro
 -----
-FooCoin is a free open source peer-to-peer electronic token system that is
+AssPennies is a free open source peer-to-peer electronic token system that is
 completely decentralized, without the need for a central server or trusted
 parties.  Users hold the crypto keys to their own money and transact directly
 with each other, with the help of a P2P network to check for double-spending.
@@ -21,16 +22,11 @@ with each other, with the help of a P2P network to check for double-spending.
 
 Setup
 -----
-You need the Qt4 run-time libraries to run foocoin-qt. On Debian or Ubuntu:
+You need the Qt4 run-time libraries to run asspennies-qt. On Debian or Ubuntu:
   sudo apt-get install libqtgui4
 
 Unpack the files into a directory and run:
- bin/32/foocoin-qt (GUI, 32-bit)
- bin/32/foocoin (headless, 32-bit)
- bin/64/foocoin-qt (GUI, 64-bit)
- bin/64/foocoin (headless, 64-bit)
-
-
-See the documentation at the bitcoin wiki:
-  https://en.bitcoin.it/wiki/Main_Page
-for help and more information.
+ bin/32/asspennies-qt (GUI, 32-bit)
+ bin/32/asspenniesd (headless, 32-bit)
+ bin/64/asspennies-qt (GUI, 64-bit)
+ bin/64/asspenniesd (headless, 64-bit)
