--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
-Building FooCoin
+Building AssPennies
 
-See doc/readme-qt.rst for instructions on building foocoin-qt,
+See doc/readme-qt.rst for instructions on building asspennies-qt,
 the intended-for-end-users, nice-graphical-interface, reference
 implementation of FooCoin.
 
-See doc/build-*.txt for instructions on building foocoin,
+See doc/build-*.txt for instructions on building asspennies,
 the intended-for-services, no-graphical-interface, reference
 implementation of FooCoin.
